# Shepherd

./: .env.example  .gitignore  DEMO.md  DESIGN.md  PRODUCT.md  README.md  STRUCTURE.md  agent_config.yaml.example  compat.py  config.py  main.py  package.json  pyproject.toml  requirements.txt  shepherd_types.py
.github/workflows/: ci.yml
coordinator/: Dockerfile  __main__.py  catalog_store.py  fly.toml  server.py  title_gen.py
dashboard/: deepgram_routes.py  events.py  fleet_trace.py  forwarder.py  server.py
dashboard/static/: index.html
data/: audit.jsonl  coords.demo.json  demo_form.html  demo_mail.html  live_job_app.html  live_projects.html  policy.yaml  routines.json  task_graphs.json.bak  workflows.json.bak  workflows.json.bak2
data/simulang/: WF_AUTONOMOUS.ts  WF_BIG.ts  WF_DRAFT_A_MAIL_APP_EMAIL.ts  WF_FIND_THE_CREATORS_OF_THE_C____PYTHON__AN.ts  WF_FOO.ts  WF_OPEN_SETTINGS_AND_TOGGLE_A_SETTING.ts  WF_SEARCH_GOOGLE.ts  WF_TWO.ts  WF_WRITE.ts  WF_WRITE_A_GMAIL_MESSAGE.ts
docs/: AGENT_S_GRID.md  DEVIN_TESTING.md  MULTI_AGENT.md  PEERING.md  PROTOCOL.md  SETUP.md  SPONSOR_AUDIT.md  design-mid-run-steering-v2.md  design-mid-run-steering.md  pitch_scripts.md  workflow-engine.md
docs/setup/: README.md  multi-machine.md  single-machine.md  tailscale.md  tunnel.md
engine/: __init__.py  _anthropic_compat.py  agent_s_adapter.py  agent_s_grounding.py  approvals.py  browserbase_driver.py  coalescer.py  coords.py  engine.py  generalize.py  llm.py  milestones.py  permissions.py  recorder.py  routine_planner.py  routines.py  run_summary.py  task_graph.py  text_input.py  trace_journal.py  workflow_control.py  workflow_describe.py  workflow_edit.py  workflow_executor.py  workflow_promote.py  workflow_store.py
frontend/: .env.example  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  traces.html
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/api/agents/: route.ts
frontend/src/app/api/agents/[id]/: route.ts
frontend/src/app/api/deepgram/status/: route.ts
frontend/src/app/api/deepgram/transcribe/: route.ts
frontend/src/app/api/interventions/: route.ts
frontend/src/app/api/interventions/[id]/: route.ts
frontend/src/app/api/routines/: route.ts
frontend/src/app/api/routines/[id]/: route.ts
frontend/src/app/api/runs/: route.ts
frontend/src/app/api/runs/[id]/: route.ts
frontend/src/app/audit/: page.tsx
frontend/src/app/command-center/: page.tsx
frontend/src/app/fleet/: page.tsx
frontend/src/app/interventions/: page.tsx
frontend/src/app/kit/: page.tsx
frontend/src/app/policy/: page.tsx
frontend/src/app/remote/: page.tsx
frontend/src/app/routines/: page.tsx
frontend/src/app/routines/[id]/: page.tsx
frontend/src/app/runs/: page.tsx
frontend/src/app/runs/[id]/: page.tsx
frontend/src/app/task-graph/: page.tsx
frontend/src/app/voice-lab/: page.tsx
frontend/src/app/workflows/: page.tsx
frontend/src/app/workflows/[id]/: page.tsx
frontend/src/components/: IntegrationsPanel.tsx  LiveExecutionGraph.tsx  RedisPanel.tsx
frontend/src/components/agents/: AgentCard.tsx
frontend/src/components/experimental/: MicTranscriber.tsx
frontend/src/components/graph/: RoutineGraph.tsx  StepNode.tsx  TaskGraphView.tsx  TraceGraph.tsx  WorkflowGraph.tsx  node-kit.tsx  nodes.tsx
frontend/src/components/layout/: PageHeader.tsx  Sidebar.tsx
frontend/src/components/remote/: MicCommandButton.tsx
frontend/src/components/ui/: primitives.tsx
frontend/src/lib/: api.ts  coordinator.ts  graph-analysis.ts  hooks.ts  mock-data.ts  shepherd-ws.tsx  status.ts  types.ts  utils.ts  webrtc.ts
integrations/: deepgram_input.py  fieldguide_adapter.py  monitor_agent.py  orkes_workflow.py  overshoot_vision.py
orchestrator/: __init__.py  arbiter.py  config.py  orchestrator.py  surfaces.py  worker.py
overlay/: README.md  index.html  main.js  package-lock.json  package.json  preload.js
router/: llm_filter.py  registry.py  router.py  vector_router.py
scripts/: agent.sh  dashboard_demo.py  dev.sh  live_job_app.py  operate.py  phoenix_experiment.py  phoenix_run_evals.py  remote_e2e.py  serve.sh  serve_phoenix.sh  start.sh  tunnel.sh  validate_job_app.py  verify_promote.py
services/: agentspan_durable.py  agentspan_research.py  armoriq_guard.py  band_boundary.py  band_collab.py  band_council_agent.py  band_verifier.py  browserbase_routine.py  browserbase_session.py  context_adapter.py  council_prompts.py  deepgram_input.py  embeddings.py  monitor_agent.py  phoenix_evals.py  policy_engine.py  relay_client.py  run_memory.py  semantic_cache.py  simulang_runner.py  stagehand_web.py  verifier.py  webrtc_sender.py
telemetry/: agent_trace.py  audit_log.py  console_log.py  evolution.py  memory.py  phoenix_client.py  request_log.py  sentry_init.py  session_replay.py  telemetry.py
tests/: e2e_live_steering.py  mock_job_app.py  test_agent_help_signal.py  test_agentspan_durable.py  test_armoriq_guard.py  test_audit_concurrency.py  test_auto_promote.py  test_autonomous_exec.py  test_band_collab.py  test_browser_tiling.py  test_browserbase_locate.py  test_catalog_api.py  test_coalescer.py  test_console_log_reasoning.py  test_e2e_steering.py  test_engine_guard.py  test_event_bus_idempotent.py  test_fleet_dispatch.py  test_fleet_summary.py  test_fleet_trace.py  test_generalize.py  test_llm.py  test_llm_filter.py  test_mid_run_steering.py  test_milestones.py  test_mode_gated_routing.py  test_orchestrator.py  test_orchestrator_arbiter.py  test_phoenix_evals.py  test_policy_engine.py  test_policy_ssrf.py  test_remote_workflow.py  test_router_source_toggles.py  test_run_memory.py  test_run_summary.py  test_segmenter_interventions.py  test_sentry_reliability.py  test_simulang.py  test_stagehand_web.py  test_teaching.py  (+8 more)
