[project]
name = "shepherd"
version = "0.1.0"
description = "Local oversight and governance layer for AI desktop agents"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pyautogui==0.9.54",
    "Pillow==10.3.0",
    "pynput==1.7.6",
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "websockets==12.0",
    "arize-phoenix-otel>=0.9.0",
    "opentelemetry-sdk==1.24.0",
    "opentelemetry-exporter-otlp==1.24.0",
    "sentry-sdk==2.4.0",
    "redis==5.0.4",
    "deepgram-sdk==3.2.7",
    "pydantic-settings>=2.2.0",
    "browserbase==0.3.0",
    "playwright==1.44.0",
    "httpx==0.27.0",
    "pytesseract==0.3.10",
    "python-dotenv==1.0.1",
]

[project.optional-dependencies]
voice   = ["pyaudio==0.2.14"]
agent_s = ["gui-agents"]

[tool.uv]
package = false
